--- a/extension/playerdetails/details.html
+++ b/extension/playerdetails/details.html
@@ -1,3 +1,4 @@
+<!-- chrome-extension://ijbbdnaakdjejinpikookognknkcpdgg/playerdetails/details.html?player_ID= -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
